[package]
name = "nita-cmms-secure-server"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-files = "0.6.2"
actix-cors = "0.7.0"
actix-limitation = "0.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
jsonwebtoken = "9.1.0"
sha2 = "0.10.8"
hmac = "0.12.1"
bcrypt = "0.15"
dotenv = "0.15.0"
regex = "1.10"
uuid = { version = "1.6", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
